@@ -3,4 +3,4 @@
 $ctest
 
 STDOUT:
-All OK.  24 tests run, 24 successes (138 assertions).
+All OK.  25 tests run, 25 successes (139 assertions).
