@@ -90,4 +90,4 @@ test.c:NNN: In test_assert_strings, assert a is empty failed. a is: Bogozity
 test.c:NNN: In test_assert_strings, assert n is empty failed. n is NULL!
 test.c:NNN: In test_assert_strings, assert e is nonempty failed. e[0] is 0!
 test.c:NNN: In test_assert_strings, assert n is nonempty failed. n is NULL!
-All OK.  24 tests run, 24 successes (138 assertions).
+All OK.  25 tests run, 25 successes (139 assertions).
