@@ -1,8 +1,7 @@
 TODO:
+- get rid of desc.  ctest_start("name") is sufficient.
 - rename run_ctest_unit_tests to ctest_run_unit_tests
 - Fix ctest_show_failures, so gross
-- MAKE SURE that we print a decent error if the user forgot to call start_test.
-	(actually, why don't we just bail out completely?)
 - I should probably get rid of __func__ -- it's not very useful anymore.
 - Call them assert files, not flavor files!  What a dumb name.
 - AssertStrEmpty and AssertStrNonEmpty suck.  Clean them up?
@@ -30,8 +29,11 @@ TODO:
 - Add the ability to temporarily disable tests but leave them in the test deck.
 - Add ability to specify an optional timeout.
 - There's got to be a better API than show_inversions
+- Make ctest's asserts behave more like regular asserts when used outside
+  a ctest_start block.
 - Add the ability to fork before each test.  It's a pretty useless feature
   but some guys seem pretty hot about this.
+- Can I get rid of nesting asserts?  That would make things simpler.
 
 Version 0.8, IN PROGRESS
 - Renamed mutest to ctest.  A generic name is better than a lame one.
